...
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnCurrentJob"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-black"
            android:onClick="handleCurrentJobClick"
...
